[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agid_assessment_methodology"
version = "0.1.0"
description = "Framework per audit di sicurezza ABSC"
readme = "README.rst"
authors = [
  {name = "Caterina Ianeselli", email = "ianesellicaterina@gmail.com"}
]
maintainers = [
  {name = "Caterina Ianeselli", email = "ianesellicaterina@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Systems Administration"
]
license = {text = "GNU General Public License v3"}
dependencies = [
    # Dipendenze minimal per ora
    "typer>=0.9.0",      # Per la CLI
    "rich>=13.0.0",      # Per output colorato
    "psutil>=5.8.0",     # Per informazioni di sistema
    "jsonschema>=4.0.0", # Per validazione configurazione
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "coverage",          # Code coverage
    "mypy",             # Type checking
    "pytest",           # Testing framework
    "pytest-cov",       # Coverage plugin per pytest
    "ruff",             # Linting moderno
    "black",            # Code formatting
]
pdf = [
    "weasyprint>=56.0",  # Per generazione PDF
    "reportlab>=3.6.0",  # Alternativa per PDF semplici
]
all = [
    "agid_assessment_methodology[dev,pdf]"
]

[project.urls]
bugs = "https://github.com/icate95/agid_assessment_methodology/issues"
changelog = "https://github.com/icate95/agid_assessment_methodology/blob/master/HISTORY.rst"
homepage = "https://github.com/icate95/agid_assessment_methodology"

[project.scripts]
agid-assessment = "agid_assessment_methodology.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# Configurazione per il linting con ruff
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

# Configurazione per i test con pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=agid_assessment_methodology",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
]

# Configurazione per mypy
[tool.mypy]
files = "src"
strict = true
warn_unreachable = true
warn_no_return = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"